src/objects/IntegrationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ClickAPIEndpoint__c</fullName>
        <label>Click API Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickAPIPassword__c</fullName>
        <label>Click API Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickAPIUsername__c</fullName>
        <label>Click API Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Settings</label>
</CustomObject>